fixed alignment

--- a/src/de/hsh/alexander/src/view/menu.css
+++ b/src/de/hsh/alexander/src/view/menu.css
@@ -1,5 +1,5 @@
 .label {
-    -fx-font-size: 18px;
+    -fx-font-size: 15px;
     -fx-font-weight: bold;
     -fx-text-fill: #26a223;
 }
